--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "ng2-opd-popup": "^1.1.21",
+    "ng2-redux": "^5.1.2",
+    "redux": "^3.7.2",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
